packages/sweetmcp-memory/cargo_check_errors2.txt
13 | pub use benchmarking_core::{
   |         ^^^^^^^^^^^^^^^^^ help: a similar path exists: `super::benchmarking_core`

error[E0432]: unresolved import `benchmarking_results`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/metrics/benchmarking_mod.rs:17:9
   |
17 | pub use benchmarking_results::{
   |         ^^^^^^^^^^^^^^^^^^^^ help: a similar path exists: `super::benchmarking_results`

error[E0432]: unresolved import `benchmarking_comparison`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/metrics/benchmarking_mod.rs:21:9
   |
21 | pub use benchmarking_comparison::{
   |         ^^^^^^^^^^^^^^^^^^^^^^^ help: a similar path exists: `super::benchmarking_comparison`

error[E0432]: unresolved import `benchmarking_monitor`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/metrics/benchmarking_mod.rs:27:9
   |
27 | pub use benchmarking_monitor::{
   |         ^^^^^^^^^^^^^^^^^^^^ help: a similar path exists: `super::benchmarking_monitor`

error[E0432]: unresolved import `super::super::calculations::PerformanceCalculations`
 --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/metrics/reporting/generation.rs:8:5
  |
8 | use super::super::calculations::PerformanceCalculations;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `PerformanceCalculations` in `cognitive::quantum_mcts::entanglement::metrics::calculations`

error[E0432]: unresolved import `types::PerformanceGrade`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/metrics/reporting/mod.rs:16:42
   |
16 |     PerformanceTrend, AggregatedMetrics, PerformanceGrade, EntanglementMetricsSummary
   |                                          ^^^^^^^^^^^^^^^^
   |                                          |
   |                                          no `PerformanceGrade` in `cognitive::quantum_mcts::entanglement::metrics::reporting::types`
   |                                          help: a similar name exists in the module: `PerformanceTrend`

error[E0432]: unresolved imports `calculations::PerformanceCalculations`, `calculations::PerformanceSnapshot`, `calculations::TrendAnalysis`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/metrics/mod.rs:31:24
   |
31 | pub use calculations::{PerformanceCalculations, PerformanceSnapshot, TrendAnalysis};
   |                        ^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^ no `TrendAnalysis` in `cognitive::quantum_mcts::entanglement::metrics::calculations`
   |                        |                        |
   |                        |                        no `PerformanceSnapshot` in `cognitive::quantum_mcts::entanglement::metrics::calculations`
   |                        no `PerformanceCalculations` in `cognitive::quantum_mcts::entanglement::metrics::calculations`
   |
   = help: consider importing one of these items instead:
           crate::cognitive::quantum_mcts::statistics::TrendAnalysis
           crate::cognitive::quantum_mcts::statistics::tree_stats_mod::TrendAnalysis
           crate::memory::stats_analysis::TrendAnalysis

error[E0432]: unresolved import `benchmarking_comparison::BenchmarkingSuite`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/metrics/mod.rs:42:5
   |
42 |     BenchmarkingSuite
   |     ^^^^^^^^^^^^^^^^^ no `BenchmarkingSuite` in `cognitive::quantum_mcts::entanglement::metrics::benchmarking_comparison`
   |
   = help: consider importing this struct instead:
           crate::cognitive::quantum_mcts::entanglement::benchmarking_mod::BenchmarkingSuite

error[E0432]: unresolved import `super::analysis`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/mod.rs:74:16
   |
74 | pub use super::analysis::{NetworkTopology, EntanglementDistribution};
   |                ^^^^^^^^ could not find `analysis` in `super`

error[E0432]: unresolved import `super::metrics`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/entanglement/mod.rs:75:16
   |
75 | pub use super::metrics::EntanglementMetrics;
   |                ^^^^^^^ could not find `metrics` in `super`

error[E0432]: unresolved import `crate::cognitive::types::OptimizationSpec`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/expansion/core.rs:16:29
   |
16 |     types::{CognitiveError, OptimizationSpec},
   |                             ^^^^^^^^^^^^^^^^
   |                             |
   |                             no `OptimizationSpec` in `cognitive::types`
   |                             help: a similar name exists in the module: `OptimizationType`
   |
   = help: consider importing this struct through its public re-export instead:
           crate::vector::async_vector_optimization::OptimizationSpec

error[E0432]: unresolved imports `super::node_state`, `super::config`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/expansion/core.rs:20:5
   |
20 |     node_state::{QuantumMCTSNode, QuantumNodeState, QuantumNodeFactory},
   |     ^^^^^^^^^^ could not find `node_state` in `super`
21 |     config::QuantumMCTSConfig,
   |     ^^^^^^ could not find `config` in `super`

error[E0432]: unresolved import `crate::cognitive::types::OptimizationSpec`
  --> packages/sweetmcp-memory/src/cognitive/quantum_mcts/expansion/engine.rs:13:29
   |
13 |     types::{CognitiveError, OptimizationSpec},
   |                             ^^^^^^^^^^^^^^^^
   |                             |
   |                             no `OptimizationSpec` in `cognitive::types`
   |                             help: a similar name exists in the module: `OptimizationType`
   |
